// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReQore/Breadcrumbs Custom Colors 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs Custom Main Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs Dark 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs Default 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs Flat 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs With Custom Theme 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs With Tabs 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Breadcrumbs With Tabs Dark 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Button Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Button Custom Color 1`] = `
<div
  className="sc-euEtCV jVELTh  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Button Custom Intent Colors 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Button Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Checkbox Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Checkbox Custom Color 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Checkbox Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Columns Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Columns Custom Columns 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Columns With Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Comments Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Comments Custom Color 1`] = `
<div
  className="sc-euEtCV erfIXh  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Comments Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/ControlGroup Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/ControlGroup Custom Color 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/ControlGroup Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Drawer Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Drawer Custom Color 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Drawer Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Dropdown Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Dropdown Interactive 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Icon Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Input Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Input Custom Color 1`] = `
<div
  className="sc-euEtCV bZkjQg  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Input Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Layout With Light Theme 1`] = `
<div
  className="sc-euEtCV hzsVBe  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Layout With Sidebar 1`] = `
<div
  className="sc-euEtCV dPjhtM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Layout Without Sidebar 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Menu Bordered 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Menu Custom Accent 1`] = `
<div
  className="sc-euEtCV hUvdbw  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Menu Custom Color 1`] = `
<div
  className="sc-euEtCV hUvdbw  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Menu Dark 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Menu Default 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Message Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Message Custom Color 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Message Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Modal Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Modal Confirmation Modal 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Modal With Custom Color 1`] = `
<div
  className="sc-euEtCV bZkjQg  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Modal With Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Navigation Bar Custom Color 1`] = `
<div
  className="sc-euEtCV hUvdbw  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Navigation Bar Custom Theme 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Navigation Bar Dark 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Navigation Bar Default 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Navigation Bar Flat 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Interactive Adding 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Interactive Clickable 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Interactive Close Callback 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Interactive Finish Callback 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Interactive Updating 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Item Custom Colors 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Item Custom Colors 2 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Item Default 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Item With Timeout 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Item With Update 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Wrapper Bottom 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Wrapper Bottom Left 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Wrapper Bottom Right 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Wrapper Top 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Wrapper Top Left 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Notifications/Wrapper Top Right 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Panel Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Panel Custom Color 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Panel Fill 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Panel Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Popover Custom Color 1`] = `
<div
  className="sc-euEtCV iOLvvP  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Popover Custom Content 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Popover Custom Position 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Popover Default 1`] = `
<div
  className="sc-euEtCV dGRwzm  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/RadioGroup Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/RadioGroup Custom Color 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/RadioGroup Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar Basic 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar Bordered 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar Collapsed 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar Collapsing Disabled 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar Flat 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar Floating 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar On Right 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Active Path 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Bookmarks 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Custom Colors 1`] = `
<div
  className="sc-euEtCV eMThhu  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Custom Element 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Custom Main Color 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Custom Theme 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Dark Theme 1`] = `
<div
  className="sc-euEtCV jDLByQ  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Light Theme 1`] = `
<div
  className="sc-euEtCV hzsVBe  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Sidebar With Native Titles 1`] = `
<div
  className="sc-euEtCV odGWC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Basic 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Complete 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Flat 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Horizontal Scroll 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Interactive Cells 1`] = `
<div
  className="sc-euEtCV gRqjrM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Interactive Rows 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Rounded 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Selectable 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Sortable 1`] = `
<div
  className="sc-euEtCV hUvdbw  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table Striped 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table With Custom Theme 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table With Dark Color 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Table With Grouped Columns 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Big 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Custom Main Color 1`] = `
<div
  className="sc-euEtCV hUvdbw  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Dark 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Default 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Fill 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Flat 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Huge 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Small 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Tiny 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Vertical 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Vertical Custom Width 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Vertical Fill 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Vertical With Intent 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tabs Vertical With Wrapping 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tag Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tag With Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/TextArea Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/TextArea Custom Color 1`] = `
<div
  className="sc-euEtCV JTgZC  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/TextArea Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tree Basic 1`] = `
<div
  className="sc-euEtCV cidxEM  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;

exports[`Storyshots ReQore/Tree With Light Color 1`] = `
<div
  className="sc-euEtCV kVsWha  reqore-layout-wrapper"
>
  <div
    className="sc-WZYut eovjVh"
    id="reqore-portal"
  />
</div>
`;
